# darkseid

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  .travis.yml  Makefile  Pipfile  README.md  README.rst  eslint.config.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  setup.py  sonar-project.properties  tox.ini
.github/: release-drafter.yml
.github/workflows/: codecov.yml  codeql-analysis.yml  pypi.yml  pythonapp.yml  release-drafter.yml  sonarcloud.yml  testing.yml
darkseid/: __init__.py  base_metadata_handler.py  comic.py  comic_archive.py  comic_info_xml.py  comicarchive.py  comicinfo.py  comicinfoxml.py  constants.py  exceptions.py  filename.py  filenameparser.py  genericmetadata.py  issue_string.py  issuestring.py  metadata.py  metroninfo.py  utils.py  validate.py
darkseid/archivers/: __init__.py  archiver.py  factory.py  pdf.py  rar.py  sevenzip.py  tar.py  zip.py
darkseid/metadata/: __init__.py  base_handler.py  base_metadata_handler.py  comicinfo.py  data_classes.py  metroninfo.py
darkseid/zipfile_remove/: __init__.py
docs/: requirements.txt
docs/darkseid/: comic.md  comicinfo.md  exceptions.md  issue_string.md  metadata.md  metroninfo.md  utils.md  validate.md
docs/darkseid/archivers/: __init__.md  archiver.md  factory.md  pdf.md  rar.md  sevenzip.md  tar.md  zip.md
docs/darkseid/metadata/: base_handler.md  base_metadata_handler.md  comicinfo.md  data_classes.md  metroninfo.md
docs/source/: conf.py  darkseid.rst  index.rst  modules.rst
tests/: conftest.py  fake_filenames.py  test_archiver.py  test_archiver_rar.py  test_archiver_unknown.py  test_archiver_zip.py  test_archivers.py  test_base_handler.py  test_base_metadata_handler.py  test_comic.py  test_comic_archive.py  test_comic_info_xml.py  test_comic_metadata.py  test_comicinfo.py  test_comicinfo_xml.py  test_darkseid_comicarchive.py  test_darkseid_comicinfoxml.py  test_darkseid_filenameparser.py  test_darkseid_genericmetadata.py  test_darkseid_issuestring.py  test_darkseid_metroninfoxml.py  test_darkseid_utils.py  test_filename.py  test_filename_parser.py  test_issue_string.py  test_metadata.py  test_metroninfo.py  test_params.py  test_utils.py  test_validate.py
tests/test_files/: Captain Science #001.cb7  Captain Science #001.cbz  ComicInfo.xsd  MetronInfo.xsd  Test #1.cbz
